--- a/day07/day7.ipynb
+++ b/day07/day7.ipynb
@@ -884,6 +884,247 @@
     "\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_data = [\n",
+    "    \"190: 10 19\",\n",
+    "    \"3267: 81 40 27\",\n",
+    "    \"83: 17 5\",\n",
+    "    \"156: 15 6\",\n",
+    "    \"7290: 6 8 6 15\",\n",
+    "    \"161011: 16 10 13\",\n",
+    "    \"192: 17 8 14\",\n",
+    "    \"21037: 9 7 18 13\",\n",
+    "    \"292: 11 6 16 20\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def possible_operators(n_operators):\n",
+    "    # operators = [\"+\", \"*\"] find all possible combinations of operators of length n_operators\n",
+    "    # n_operators = 0 -> []\n",
+    "    # n_operators = 1 -> [\"+\", \"*\"]\n",
+    "    # n_operators = 2 -> [\"++\", \"+*\", \"*+\", \"**\"]\n",
+    "\n",
+    "    if n_operators == 0:\n",
+    "        return []\n",
+    "    if n_operators == 1:\n",
+    "        return [\"+\", \"*\"]\n",
+    "    if n_operators == 2:\n",
+    "        return [\"++\", \"+*\", \"*+\", \"**\"]\n",
+    "    \n",
+    "    return [x + y for x in possible_operators(n_operators - 1) for y in possible_operators(1)]\n",
+    "\n",
+    "def is_equal(line):\n",
+    "    solution, nums = line.split(\":\")\n",
+    "    nums = nums.split(\" \")\n",
+    "    nums = [int(x) for x in nums[1:]]\n",
+    "\n",
+    "    n_operator = len(nums) - 1\n",
+    "    operators = possible_operators(n_operator)\n",
+    "\n",
+    "    for operator in operators:\n",
+    "        res = nums[0] \n",
+    "        for j in range(n_operator):\n",
+    "            if operator[j] == \"+\":\n",
+    "                res += nums[j + 1]\n",
+    "            else:\n",
+    "                res *= nums[j + 1]\n",
+    "        \n",
+    "        if res == int(solution):\n",
+    "            return res\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "def solution(data):\n",
+    "    return sum([is_equal(x) for x in data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3749"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(dummy_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6083020304036"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_possible_operators(n_operators):\n",
+    "    # operators = [\"+\", \"*\", \"|\"] find all possible combinations of operators of length n_operators\n",
+    "    # n_operators = 0 -> []\n",
+    "    # n_operators = 1 -> [\"+\", \"*\", \"|\"]\n",
+    "    # n_operators = 2 -> [\"++\", \"+*\", \"*+\", \"**\", \"*|\", \"|*\", \"+|\", \"|+\", \"||\"]\n",
+    "\n",
+    "    if n_operators == 0:\n",
+    "        return []\n",
+    "    if n_operators == 1:\n",
+    "        return [\"+\", \"*\", \"|\"]\n",
+    "    if n_operators == 2:\n",
+    "        return [\"++\", \"+*\", \"*+\", \"**\", \"*|\", \"|*\", \"+|\", \"|+\", \"||\"]\n",
+    "    \n",
+    "    return [x + y for x in new_possible_operators(n_operators - 1) for y in new_possible_operators(1)]\n",
+    "\n",
+    "def new_is_equal(line):\n",
+    "    solution, nums = line.split(\":\")\n",
+    "    nums = nums.split(\" \")\n",
+    "    nums = [int(x) for x in nums[1:]]\n",
+    "\n",
+    "    n_operator = len(nums) - 1\n",
+    "    operators = new_possible_operators(n_operator)\n",
+    "\n",
+    "    for operator in operators:\n",
+    "        res = nums[0]\n",
+    "        for j in range(n_operator):\n",
+    "            if operator[j] == \"+\":\n",
+    "                res += nums[j + 1]\n",
+    "            elif operator[j] == \"*\":\n",
+    "                res *= nums[j + 1]\n",
+    "            else:\n",
+    "                res = int(str(res) + str(nums[j + 1]))\n",
+    "        \n",
+    "        if res == int(solution):\n",
+    "            return res\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "def new_solution(data):\n",
+    "    return sum([new_is_equal(x) for x in data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_solution([\"156: 15 6\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7290"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7290: 6 8 6 15 can be made true using 6 * 8 || 6 * 15.\n",
+    "new_solution([\"7290: 6 8 6 15\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11387"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_solution(dummy_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59002246504791"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_solution(data)"
+   ]
   }
  ],
  "metadata": {
